Closed
Bug 242122
Opened 21 years ago
Closed 21 years ago
[Gtk2] Flash not rendered correctly in table
Categories
(Core Graveyard :: Plug-ins, defect, P2)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: pleugner, Assigned: roc)
References
()
Details
Attachments
(1 file)
|
1.54 KB,
patch
|
iamawalrus
:
review+
bryner
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.6) Gecko/20040427 Firefox/0.8
Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.6) Gecko/20040427 Firefox/0.8
In the page at
http://www.bbc.co.uk/cbeebies/storycircle/popup/full_template.shtml?file=/cbeebies/storycircle/fairystories/jackbeanstalk/flash/jack_s&bg=000000
the flash movie should cover 100% of the width according to the attributes. This
worked on firebird 0.7 and mozilla 1.4.
Reproducible: Always
Steps to Reproduce:
1.Go to
http://www.bbc.co.uk/cbeebies/storycircle/popup/full_template.shtml?file=/cbeebies/storycircle/fairystories/jackbeanstalk/flash/jack_s&bg=000000
Actual Results:
Flash movie is clipped to a table column
Expected Results:
flash movie should show with 100% width
| Reporter | ||
Updated•21 years ago
|
Flags: blocking1.8a?
Flags: blocking1.7?
Seeing the same thing. I just filed bug 242127, which might be a dup of this.
Comment 2•21 years ago
|
||
Peter, you've nominated this bug for fixing on the 1.7 branch. Have you tested
to see if it's a problem for 1.7 branch builds?
http://ftp.mozilla.org/pub/mozilla.org/mozilla/nightly/latest-1.7/
Comment 3•21 years ago
|
||
OK. this does impact the 1.7 branch.
Updated•21 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
*** Bug 242127 has been marked as a duplicate of this bug. ***
Updated•21 years ago
|
Flags: blocking1.8a? → blocking1.8a-
Comment 5•21 years ago
|
||
jst, rock, or dbaron, can you take a look at this?
Comment 6•21 years ago
|
||
Roc, looks like linux only plugin painting problem. Can you have a look?
Assignee: peterlubczynski-bugs → roc
| Assignee | ||
Comment 8•21 years ago
|
||
The plugin widget has the right size. It looks like it's being covered by
something else. But I don't see any other widgets in the layout debugger widget
tree.
| Assignee | ||
Comment 9•21 years ago
|
||
Is this GTK2 only? I suspect a toolkit bug.
Blizzard, tor, is there a way to find out why the Flash plugin isn't painting
itself over the whole widget area?
Comment 10•21 years ago
|
||
http://www7.nrk.no/nrkplayer/testnettleser.aspx?hovedkategori_id=2&prosjekt_id=0&kategori_id=0&klipp_id=0&indeks_id=0&oppgave_id=0&sok=&bhcp=1
Right frame shows as a flash area in other browsers but is mostly covered by
"black" nothing in Mozilla. Not sure if its the same since that site also shows
the bug in an official nightly build (gtk1)
Comment 11•21 years ago
|
||
Interesting. In that last test case I think the black area might be something
we're creating because the flash plugin doesn't appear to get the events. Maybe
something down in the xtbin code?
Comment 12•21 years ago
|
||
if you mouse over the top or right edge of the black area, you see the "flash
hand". Right-click then and the flash menu is there. Or left-click - and the
flash plugin action activates. (and then resets, covered in black)
Comment 13•21 years ago
|
||
A good test is to load the following url in the embedding widget test harness
directly:
http://www.bbc.co.uk/cbeebies/storycircle/fairystories/jackbeanstalk/flash/jack_s.swf
then resize the toplevel window. You will see that the innermost window still
maintains the original size (in my case 400x400.)
Looking at the window tree is interesting. Here are the innermost bits:
1 child:
0x2c00094 (has no name): () 580x510+0+0 +1933+76
1 child:
0x2c00095 (has no name): () 580x510+0+0 +1933+76
1 child:
0x2e00001 (has no name): () 400x400+0+0
It's pretty safe to assume that the innermost window here is owned by the flash
plugin. It's still 400x400 which means it is either not getting the resize
events or isn't honoring them.
It doesn't seem like there's much chance of this being fixed for 1.7, and
there's no indication that this is a recent regression.
Flags: blocking1.7? → blocking1.7-
Summary: Flash not rendered correctly in table → [Gtk2] Flash not rendered correctly in table
Comment 15•21 years ago
|
||
This patch removes from the event mask the two Redirect masks. This means that
the socket that owns the widget will get the configure events for the widget
and will properly respond to resize requests. It also sends the size_allocate
signal to the socket so that a resize request will be queued.
Updated•21 years ago
|
Attachment #150079 -
Flags: superreview?(bryner)
Attachment #150079 -
Flags: review?(robin.lu)
Flags: blocking1.7- → blocking1.7+
Updated•21 years ago
|
Attachment #150079 -
Flags: superreview?(bryner) → superreview+
Comment 16•21 years ago
|
||
Comment on attachment 150079 [details] [diff] [review]
patch that fixes some event masks
I wonder if this patch also fixes bug 201158 .
Attachment #150079 -
Flags: review?(robin.lu) → review+
Comment 17•21 years ago
|
||
Checked into the trunk. I would like to see this shake out a bit on the trunk
before hitting the 1.7 branch. (Our plugin code is a house of cards.)
Updated•21 years ago
|
Flags: blocking1.7+ → blocking1.7-
Comment 18•21 years ago
|
||
*** Bug 247874 has been marked as a duplicate of this bug. ***
Comment 19•21 years ago
|
||
If the patch has been checked into the trunk, why still leave this bug as new?
Comment 20•21 years ago
|
||
Marking FIXED.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Comment 21•21 years ago
|
||
This may be the cause of this Eclipse bug report:
https://bugs.eclipse.org/bugs/show_bug.cgi?id=67061
Comment 22•21 years ago
|
||
The patch here also caused bug 282928.
Comment 23•20 years ago
|
||
Though it is marked as fixed, I get exactly the same error with
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.7.7) Gecko/20050524
Firefox/1.0.3
The same bug appears at http://www.hitchhikersmovie.com
Comment 24•20 years ago
|
||
(In reply to comment #23)
> Though it is marked as fixed, I get exactly the same error with
> User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.7.7) Gecko/20050524
> Firefox/1.0.3
> The same bug appears at http://www.hitchhikersmovie.com
>
I am having the same problem on mentioned URL's. My useragent string is:
Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.7.8) Gecko/20050511 Firefox/1.0.4
Comment 25•20 years ago
|
||
(In reply to comment #23)
> Though it is marked as fixed, I get exactly the same error with
> User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.7.7) Gecko/20050524
> Firefox/1.0.3
The patch has NOT been landed on firefox 1.0.x/suite 1.7.x branches (comment
#17), which is why you have this problem with ff 1.0.3. If you try a *trunk*
nightly build, you'll see that it's fixed, but you'll have a different bug (bug
282928)
Comment 26•20 years ago
|
||
*** Bug 311940 has been marked as a duplicate of this bug. ***
Comment 27•20 years ago
|
||
*** Bug 294178 has been marked as a duplicate of this bug. ***
Comment 28•20 years ago
|
||
*** Bug 297485 has been marked as a duplicate of this bug. ***
Comment 29•20 years ago
|
||
*** Bug 315190 has been marked as a duplicate of this bug. ***
Updated•3 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•