Bug #242122.  Flash plugins that need to be resized in gtk2 builds don't render in the newly exposed areas.  Make sure that we don't catch any of the Redirect X events so that the socket will get the resize events and call size_allocate from the resize method on the socket so resize events are processed.  r=robin,sr=bryner